[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "happysimulator"
version = "0.1.0"
description = "Easily simulate systems using Python."
readme = "README.md"
authors = [
    { name = "VidaVolta software.", email = "vidavoltasoftware@gmail.com" }
]
keywords = ["simulator", "happy", "network", "distributed", "client", "server", "queue"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = [
    "matplotlib>=3.0.0",
    "pandas>=1.0.0"
]

[project.urls]
homepage = "https://github.com/adamcyber1/happy-simulator"
issues = "https://github.com/adamcyber1/happy-simulator/issues"
